--- a/contact-api/package.json
+++ b/contact-api/package.json
@@ -6,9 +6,11 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
-    "build": "tsc -p .",
+    "build": "tsc -p . && npx prisma generate",
     "start": "node dist/index.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "railway:start": "npx prisma db push && npm start",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
