--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Build
         run: |
           cd mugsy-site
+          cp .env.production .env
           npm run build
       
       - name: Setup Pages
