Add Railway deployment guides and update API URL

--- a/mugsy-site/.env.production
+++ b/mugsy-site/.env.production
@@ -2,7 +2,7 @@
 # Replace 'your-railway-app' with your actual Railway app name
 
 # Backend API URL (Railway deployment)
-VITE_API_BASE=https://your-railway-app.railway.app
+VITE_API_BASE=https://contact-api-production-e6c9.up.railway.app
 
 # Development (uncomment for local development)
 # VITE_API_BASE=http://localhost:8787
