🔐 Production deployment: Security hardening + redmugsy.com config
- Added comprehensive API security (Helmet, HPP, rate limiting, compression)
- Implemented Cloudflare Turnstile integration with monitoring
- Added CSP headers and edge authentication
- Updated routing for production (base path / instead of /mugsywebsite/)
- Created production env with api.redmugsy.com endpoints
- Added performance testing scripts (Artillery, k6)
- Fixed navigation links and mobile hamburger menu
- Ready for redmugsy.com deployment with Cloudflare proxy

--- a/mugsy-site/.env.production
+++ b/mugsy-site/.env.production
@@ -1,8 +1,16 @@
-# Frontend Environment Variables
-# Replace 'your-railway-app' with your actual Railway app name
+# Production environment for redmugsy.com
+# API will be proxied through Cloudflare at api.redmugsy.com
+VITE_API_BASE=https://api.redmugsy.com
 
-# Backend API URL (Railway deployment)
-VITE_API_BASE=https://contact-api-production-e6c9.up.railway.app
+# Captcha provider
+VITE_CAPTCHA_PROVIDER=turnstile
 
-# Development (uncomment for local development)
-# VITE_API_BASE=http://localhost:8787
+# Cloudflare Turnstile sitekeys - MUST be configured for redmugsy.com domain
+VITE_TURNSTILE_SITEKEY=0x4AAAAAAB7WuTonb7Tn2OC2
+VITE_TURNSTILE_SITEKEY_CLAIM=0x4AAAAAAB7YbS7coTD_dX_t
+
+# Claim feature
+VITE_FEATURE_CLAIM=true
+VITE_CLAIM_CONTRACT=0x1234567890123456789012345678901234567890
+VITE_CLAIM_CHAIN_ID=1
+VITE_CLAIM_RPC_URL=https://mainnet.infura.io/v3/YOUR_PROJECT_ID
