--- a/mugsy-site/.env
+++ b/mugsy-site/.env
@@ -1,5 +1,7 @@
 # Frontend env (Vite)
 // Base URL of the Contact API server (Express)
+# For development: Railway direct URL
+# For production: Should be https://api.redmugsy.com (via Cloudflare proxy)
 VITE_API_BASE=https://contact-api-production-e6c9.up.railway.app
 
 # Captcha provider indicator used for UI (pow|image|none)
