🔑 Update Turnstile keys for production
- Updated frontend site keys for Contact (0x4AAAAAAB-gWCHhZ_cF2uz9) and Claims (0x4AAAAAAB-gYLApRvUyjKDX)
- Updated backend secret keys for both Contact and Claims forms
- Rebuilt production assets with correct keys
- Verified local development servers working with new configuration

--- a/mugsy-site/.env
+++ b/mugsy-site/.env
@@ -7,10 +7,10 @@ VITE_API_BASE=https://contact-api-production-e6c9.up.railway.app
 # Captcha provider indicator used for UI (pow|image|none)
 VITE_CAPTCHA_PROVIDER=turnstile
 
-// Cloudflare Turnstile sitekey (frontend)
-// Obtain from Cloudflare dashboard
-VITE_TURNSTILE_SITEKEY=0x4AAAAAAB7WuTonb7Tn2OC2
-VITE_TURNSTILE_SITEKEY_CLAIM=0x4AAAAAAB7YbS7coTD_dX_t
+// Cloudflare Turnstile sitekeys (frontend)
+// Updated with correct keys from Cloudflare dashboard
+VITE_TURNSTILE_SITEKEY=0x4AAAAAAB-gWCHhZ_cF2uz9
+VITE_TURNSTILE_SITEKEY_CLAIM=0x4AAAAAAB-gYLApRvUyjKDX
 
 # --- Claim feature ---
 VITE_FEATURE_CLAIM=true
