--- a/mugsy-site/.env.production
+++ b/mugsy-site/.env.production
@@ -5,9 +5,9 @@ VITE_API_BASE=https://api.redmugsy.com
 # Captcha provider
 VITE_CAPTCHA_PROVIDER=turnstile
 
-# Cloudflare Turnstile sitekeys - MUST be configured for redmugsy.com domain
-VITE_TURNSTILE_SITEKEY=0x4AAAAAAB7WuTonb7Tn2OC2
-VITE_TURNSTILE_SITEKEY_CLAIM=0x4AAAAAAB7YbS7coTD_dX_t
+# Cloudflare Turnstile sitekeys - configured for redmugsy.com domain
+VITE_TURNSTILE_SITEKEY=0x4AAAAAAB-gWCHhZ_cF2uz9
+VITE_TURNSTILE_SITEKEY_CLAIM=0x4AAAAAAB-gYLApRvUyjKDX
 
 # Claim feature
 VITE_FEATURE_CLAIM=true
