--- a/mugsy-site/package.json
+++ b/mugsy-site/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:staging": "tsc -b && vite build --config vite.staging.config.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
