Fix: Update environment and rebuild site
- Disable Claims feature temporarily (VITE_FEATURE_CLAIM=false)
- Update API base URL to use Railway direct URL temporarily
- Fix dummy contract addresses and RPC URLs
- Rebuild with proper environment configuration
- This should resolve 'Module not available' error on Claims page

--- a/mugsy-site/.env.production
+++ b/mugsy-site/.env.production
@@ -1,6 +1,7 @@
 # Production environment for redmugsy.com
 # API will be proxied through Cloudflare at api.redmugsy.com
-VITE_API_BASE=https://api.redmugsy.com
+# Temporarily using Railway direct URL until custom domain is set up
+VITE_API_BASE=https://contact-api-production-e6c9.up.railway.app
 
 # Captcha provider
 VITE_CAPTCHA_PROVIDER=turnstile
@@ -9,8 +10,8 @@ VITE_CAPTCHA_PROVIDER=turnstile
 VITE_TURNSTILE_SITEKEY=0x4AAAAAAB-gWCHhZ_cF2uz9
 VITE_TURNSTILE_SITEKEY_CLAIM=0x4AAAAAAB-gYLApRvUyjKDX
 
-# Claim feature
-VITE_FEATURE_CLAIM=true
-VITE_CLAIM_CONTRACT=0x1234567890123456789012345678901234567890
+# Claim feature - TEMPORARILY DISABLED until contract is deployed
+VITE_FEATURE_CLAIM=false
+VITE_CLAIM_CONTRACT=0x0000000000000000000000000000000000000000
 VITE_CLAIM_CHAIN_ID=1
-VITE_CLAIM_RPC_URL=https://mainnet.infura.io/v3/YOUR_PROJECT_ID
+VITE_CLAIM_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/demo
