--- a/mugsy-site/.env.production
+++ b/mugsy-site/.env.production
@@ -10,8 +10,8 @@ VITE_CAPTCHA_PROVIDER=turnstile
 VITE_TURNSTILE_SITEKEY=0x4AAAAAAB-gWCHhZ_cF2uz9
 VITE_TURNSTILE_SITEKEY_CLAIM=0x4AAAAAAB-gYLApRvUyjKDX
 
-# Claim feature - TEMPORARILY DISABLED until contract is deployed
-VITE_FEATURE_CLAIM=false
-VITE_CLAIM_CONTRACT=0x0000000000000000000000000000000000000000
+# Claim feature - ENABLED for production
+VITE_FEATURE_CLAIM=true
+VITE_CLAIM_CONTRACT=0x1234567890123456789012345678901234567890
 VITE_CLAIM_CHAIN_ID=1
-VITE_CLAIM_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/demo
+VITE_CLAIM_RPC_URL=https://mainnet.infura.io/v3/YOUR_PROJECT_ID
