--- a/contact-api/nixpacks.toml
+++ b/contact-api/nixpacks.toml
@@ -1,7 +1,13 @@
+[phases.setup]
+nixPkgs = ["nodejs", "npm"]
+
+[phases.install]
+cmd = "npm ci"
+
 [phases.build]
 cmd = "npm run build"
 
-[phases.start]
+[start]
 cmd = "npm start"
 
 [variables]
