--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "mugsywebsite-root",
+  "private": true,
+  "scripts": {
+    "install": "cd contact-api && npm ci",
+    "build": "cd contact-api && npm run build",
+    "start": "cd contact-api && npm start"
+  },
   "devDependencies": {
     "@types/compression": "^1.8.1",
     "@types/express-slow-down": "^1.3.5",
