--- a/contact-api/package.json
+++ b/contact-api/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "description": "Red Mugsy contact form backend (replica)",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "build": "tsc -p . && npx prisma generate",
-    "start": "node dist/index.js",
+    "start": "node index.js",
     "typecheck": "tsc --noEmit",
     "postinstall": "npx prisma generate"
   },
