--- a/contact-api/nixpacks.toml
+++ b/contact-api/nixpacks.toml
@@ -1,2 +1,14 @@
+[variables]
+NODE_ENV = "production"
+
+[phases.setup]
+nixPkgs = ["nodejs-18_x", "npm"]
+
+[phases.install]
+cmd = "npm ci"
+
+[phases.build] 
+cmd = "npm run build"
+
 [start]
 cmd = "npm start"
