--- a/mugsy-site/package.json
+++ b/mugsy-site/package.json
@@ -14,25 +14,35 @@
   "dependencies": {
     "@marsidev/react-turnstile": "^1.3.1",
     "@rainbow-me/rainbowkit": "^2.2.0",
+    "@rollup/rollup-linux-x64-gnu": "^4.53.3",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "@tanstack/react-query": "^5.62.7",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
     "flag-icons": "^7.2.3",
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.0",
     "libphonenumber-js": "^1.11.7",
+    "process": "^0.11.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-i18next": "^16.1.0",
     "recharts": "^3.2.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "viem": "^2.21.15",
+    "vm-browserify": "^1.1.2",
     "wagmi": "^2.13.1"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.36.0",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.14",
@@ -45,6 +55,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "^4.1.14",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
